Разметка главной страницы

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header class="page-header">
       <div class="container">
-        <a class="logo header-logo" href="#" title=""></a>
+        <a class="logo header-logo" title="">Device</a>
         <div class="header-wrap">
           <form class="form-search" action="http://echo.htmlacademy.ru" method="post">
             <input type="search" placeholder="Поиск:">
@@ -63,7 +63,7 @@
               <img src="img/" alt="">
             </div>
             <div class="slider-desc">
-              <p class="slider-title">Делай селфи, как Бен Стиллер!</p>
+              <p class="slider-title title">Делай селфи, как Бен Стиллер!</p>
               <p class="slider-text text-site">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
               <div class="slider-link-wrap">
                 <a class="slider-link more-link" href="" title="">Подробнее</a>
@@ -108,48 +108,48 @@
               <div class="categories-img">
                 <img src="img/" alt="">
               </div>
+              <p>Виртуальная реальность</p>
             </a>
-            <p>Виртуальная реальность</p>
+          </li>
+          <li class="categories-item">
+            <a class="categories-link" href="catalog.html" title="">
+              <div class="categories-img">
+                <img src="img/" alt="">
+              </div>
+              <p>Моноподы для селфи</p>
+            </a>
           </li>
           <li class="categories-item">
             <a class="categories-link" href="" title="">
               <div class="categories-img">
                 <img src="img/" alt="">
               </div>
+              <p>Экшн-камеры</p>
             </a>
-            <p>Моноподы для селфи</p>
           </li>
           <li class="categories-item">
             <a class="categories-link" href="" title="">
               <div class="categories-img">
                 <img src="img/" alt="">
               </div>
+              <p>Фитнес-браслеты</p>
             </a>
-            <p>Экшн-камеры</p>
           </li>
           <li class="categories-item">
             <a class="categories-link" href="" title="">
               <div class="categories-img">
                 <img src="img/" alt="">
               </div>
+              <p>Умные часы</p>
             </a>
-            <p>Фитнес-браслеты</p>
           </li>
           <li class="categories-item">
             <a class="categories-link" href="" title="">
               <div class="categories-img">
                 <img src="img/" alt="">
               </div>
+              <p>Квадрокоптеры</p>
             </a>
-            <p>Умные часы</p>
-          </li>
-          <li class="categories-item">
-            <a class="categories-link" href="" title="">
-              <div class="categories-img">
-                <img src="img/" alt="">
-              </div>
-            </a>
-            <p>Квадрокоптеры</p>
           </li>
         </ul>
       </section>
@@ -233,7 +233,7 @@
     <footer class="page-footer">
       <div class="container">
         <div class="footer-wrap">
-          <a class="logo footer-logo" href="#" title=""></a>
+          <a class="logo footer-logo" title="">Device</a>
           <div class="footer-users">
             <a class="footer-user-link login-footer">Войти</a>
             <a class="footer-user-link compare-footer">Сравнить</a>
