Внесение исправлений по кнопкам и добавление в меню навигации

--- a/catalog.html
+++ b/catalog.html
@@ -15,42 +15,51 @@
   <body>
     <header class="page-header">
       <div class="container">
-        <a class="logo header-logo" href="index.html" title="">Device</a>
+        <a class="logo header-logo" href="index.html">Device</a>
         <div class="header-wrap">
           <form class="form-search" action="http://echo.htmlacademy.ru" method="get">
             <input type="search" placeholder="Поиск:">
             <button type="submit" class="button search-button">Найти</button>
           </form>
-          <a class="header-user person-header" href="" title="">Валентин Петухов</a>
-          <a class="header-user login-out-header" href="" title="">Выйти</a>
-          <a class="header-user login-header" href="" title="">Войти</a>
-          <a class="header-user compare-header" href="" title="">Сравнить</a>
-          <a class="header-user cart-header" href="" title="">Корзина</a>
+          <a class="header-user person-header" href="">Валентин Петухов</a>
+          <a class="header-user login-out-header" href="">Выйти</a>
+          <a class="header-user login-header" href="">Войти</a>
+          <a class="header-user compare-header" href="">Сравнить</a>
+          <a class="header-user cart-header" href="">Корзина</a>
         </div>
         <nav class="header-navigation">
           <ul class="catalog">
             <li class="catalog-item">
-              <a href="" title="">Каталог товаров</a>
+              <a href="">Каталог товаров</a>
               <ul class="goods">
                 <li class="goods-item">
-                  <a href="" title="">Виртуальная реальность</a>
+                  <a href="">Виртуальная реальность</a>
                 </li>
                 <li class="goods-item">
-                  <a href="catalog.html" title="">Моноподы для селфи</a>
+                  <a href="catalog.html">Моноподы для селфи</a>
                 </li>
                 <li class="goods-item">
-                  <a href="" title="">Экшн-камеры</a>
+                  <a href="">Экшн-камеры</a>
                 </li>
                 <li class="goods-item">
-                  <a href="" title="">Фитнес-браслеты</a>
+                  <a href="">Фитнес-браслеты</a>
                 </li>
                 <li class="goods-item">
-                  <a href="" title="">Умные часы</a>
+                  <a href="">Умные часы</a>
                 </li>
                 <li class="goods-item">
-                  <a href="" title="">Квадрокопторы</a>
+                  <a href="">Квадрокопторы</a>
                 </li>
               </ul>
+            </li>
+            <li class="catalog-item">
+              <a href="">Доставка</a>
+            </li>
+            <li class="catalog-item">
+              <a href="">Гарантия</a>
+            </li>
+            <li class="catalog-item">
+              <a href="">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -62,13 +71,13 @@
           <h1 class="catalog-inner-title title">Моноподы для селфи</h1>
             <ul class="crumbs">
               <li class="crumb-item">
-                <a href="" title="">Главная</a>
+                <a href="">Главная</a>
               </li>
               <li class="crumb-item">
-                <a href="" title="">Каталог товаров</a>
+                <a href="">Каталог товаров</a>
               </li>
               <li class="crumb-item">
-                <a href="" title="">Моноподы для селфи</a>
+                <a href="">Моноподы для селфи</a>
               </li>
             </ul>
         </section>
@@ -81,21 +90,21 @@
             <h3>Сортировка:</h3>
               <ul class="catalog-assort-list">
                 <li class="catalog-assort-item">
-                  <a class="catalog-assort-link" href="" title="">По цене</a>
+                  <a class="catalog-assort-link" href="">По цене</a>
                 </li>
                 <li class="catalog-assort-item">
-                  <a class="catalog-assort-link" href="" title="">По типу</a>
+                  <a class="catalog-assort-link" href="">По типу</a>
                 </li>
                 <li class="catalog-assort-item">
-                  <a class="catalog-assort-link" href="" title="">По популярности</a>
+                  <a class="catalog-assort-link" href="">По популярности</a>
                 </li>
               </ul>
               <ul class="catalog-assort-arrows">
                 <li class="assort-arrow-item">
-                  <a class="arrow-up" href="" title=""></a>
+                  <a class="arrow-up" href=""></a>
                 </li>
                 <li class="assort-arrow-item">
-                  <a class="arrow-down" href="" title=""></a>
+                  <a class="arrow-down" href=""></a>
                 </li>
               </ul>
           </div>
@@ -172,11 +181,11 @@
             <img src="img/" alt="">
           </div>
           <div class="info-hover">
-            <a class="more-link" href="" title="">В корзину</a>
+            <a class="more-link" href="">В корзину</a>
             <button type="submit" class="button more-link">Добавить к сравнению</button>
           </div>
           <div class="product-info">
-            <a class="" href="" title="">Любительская селфи-палка</a>
+            <a class="" href="">Любительская селфи-палка</a>
             <p class="product-price">500 руб</p>
           </div>
         </li>
@@ -185,11 +194,11 @@
             <img src="img/" alt="">
           </div>
           <div class="info-hover">
-            <a class="more-link" href="" title="">В корзину</a>
+            <a class="more-link" href="">В корзину</a>
             <button type="submit" class="button more-link">Добавить к сравнению</button>
           </div>
           <div class="product-info">
-            <a class="" href="" title="">Профессиональная селфи‑палка</a>
+            <a class="" href="">Профессиональная селфи‑палка</a>
             <p class="product-price">1 500 руб</p>
           </div>
         </li>
@@ -198,11 +207,11 @@
             <img src="img/" alt="">
           </div>
           <div class="info-hover">
-            <a class="more-link" href="" title="">В корзину</a>
+            <a class="more-link" href="">В корзину</a>
             <button type="submit" class="button more-link">Добавить к сравнению</button>
           </div>
           <div class="product-info">
-            <a class="" href="" title="">Непотопляемая селфи-палка</a>
+            <a class="" href="">Непотопляемая селфи-палка</a>
             <p class="product-price">2 500 руб</p>
           </div>
         </li>
@@ -211,11 +220,11 @@
             <img src="img/" alt="">
           </div>
           <div class="info-hover">
-            <a class="more-link" href="" title="">В корзину</a>
+            <a class="more-link" href="">В корзину</a>
             <button type="submit" class="button more-link">Добавить к сравнению</button>
           </div>
           <div class="product-info">
-            <a class="" href="" title="">Селфи-палка «Следуй за мной»</a>
+            <a class="" href="">Селфи-палка «Следуй за мной»</a>
             <p class="product-price">4 900 руб</p>
           </div>
         </li>
@@ -223,23 +232,23 @@
       <div class="pagination">
         <ul class="pagination-list">
           <li class="pagination-item">
-            <a class="pagination-link" href="" title="">Назад</a>
+            <button class="pagination-btn">Назад</button>
           </li>
           <li>
           <ul class="pagination-number">
             <li>
-              <a class="pagination-number-active" href="" title="">1</a>
+              <button class="pagination-number-active">1</button>
             </li>
             <li>
-              <a href="" title="">2</a>
+              <button>2</button>
             </li>
             <li>
-              <a href="" title="">3</a>
+              <button>3</button>
             </li>
           </ul>
         </li>
           <li class="pagination-item">
-            <a  class="pagination-link" href="" title="">Вперед</a>
+            <button class="pagination-btn">Вперед</button>
           </li>
         </ul>
       </div>
@@ -249,10 +258,10 @@
     <footer class="page-footer">
       <div class="container">
         <div class="footer-wrap">
-          <a class="logo footer-logo" href="index.html" title="">Device</a>
+          <a class="logo footer-logo" href="index.html">Device</a>
           <div class="footer-users">
-            <a class="footer-user person-header" href="" title="">Валентин Петухов</a>
-            <a class="footer-user login-out-header" href="" title="">Выйти</a>
+            <a class="footer-user person-header" href="">Валентин Петухов</a>
+            <a class="footer-user login-out-header" href="">Выйти</a>
             <a class="footer-user-link login-footer">Войти</a>
             <a class="footer-user-link compare-footer">Сравнить</a>
             <a class="footer-user-link cart-footer">Корзина</a>
@@ -262,16 +271,16 @@
           <p class="address">г. Москва, ул. Строителей, 15</p>
           <ul class="footer-navigation">
             <li class="footer-navigation-item">
-              <a href="" title="">Доставка</a>
+              <a href="">Доставка</a>
             </li>
             <li class="footer-navigation-item">
-              <a href="" title="">Гарантия</a>
+              <a href="">Гарантия</a>
             </li>
             <li class="footer-navigation-item">
-              <a href="" title="">Контакты</a>
+              <a href="">Контакты</a>
             </li>
           </ul>
-          <p class="footer-phone">Тел.: +7 (495) 495-95-95</p>
+          <a class="footer-phone" href="">Тел.: +7 (495) 495-95-95</a>
           <div class="footer-contacts">
             <ul class="social-list">
               <li class="social-item">
@@ -296,7 +305,7 @@
       </a>
     </li>
   </ul>
-  <a class="academy-logo" href="" title="">
+  <a class="academy-logo" href="">
     <img src="img/" alt="">
   </a>
 </div>
