--- a/index.html
+++ b/index.html
@@ -15,40 +15,49 @@
   <body>
     <header class="page-header">
       <div class="container">
-        <a class="logo header-logo" title="">Device</a>
+        <a class="logo header-logo">Device</a>
         <div class="header-wrap">
-          <form class="form-search" action="http://echo.htmlacademy.ru" method="post">
+          <form class="form-search" action="http://echo.htmlacademy.ru" method="get">
             <input type="search" placeholder="Поиск:">
             <button type="submit" class="button search-button">Найти</button>
           </form>
-          <a class="header-user login-header" href="" title="">Войти</a>
-          <a class="header-user compare-header" href="" title="">Сравнить</a>
-          <a class="header-user cart-header" href="" title="">Корзина</a>
+          <a class="header-user login-header" href="">Войти</a>
+          <a class="header-user compare-header" href="">Сравнить</a>
+          <a class="header-user cart-header" href="">Корзина</a>
         </div>
         <nav class="header-navigation">
           <ul class="catalog">
             <li class="catalog-item">
-              <a href="" title="">Каталог товаров</a>
+              <a href="">Каталог товаров</a>
               <ul class="goods">
                 <li class="goods-item">
-                  <a href="" title="">Виртуальная реальность</a>
+                  <a href="">Виртуальная реальность</a>
                 </li>
                 <li class="goods-item">
-                  <a href="catalog.html" title="">Моноподы для селфи</a>
+                  <a href="catalog.html">Моноподы для селфи</a>
                 </li>
                 <li class="goods-item">
-                  <a href="" title="">Экшн-камеры</a>
+                  <a href="">Экшн-камеры</a>
                 </li>
                 <li class="goods-item">
-                  <a href="" title="">Фитнес-браслеты</a>
+                  <a href="">Фитнес-браслеты</a>
                 </li>
                 <li class="goods-item">
-                  <a href="" title="">Умные часы</a>
+                  <a href="">Умные часы</a>
                 </li>
                 <li class="goods-item">
-                  <a href="" title="">Квадрокопторы</a>
+                  <a href="">Квадрокопторы</a>
                 </li>
               </ul>
+            </li>
+            <li class="catalog-item">
+              <a href="">Доставка</a>
+            </li>
+            <li class="catalog-item">
+              <a href="">Гарантия</a>
+            </li>
+            <li class="catalog-item">
+              <a href="">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -66,21 +75,7 @@
               <p class="slider-title title">Делай селфи, как Бен Стиллер!</p>
               <p class="slider-text text-site">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
               <div class="slider-link-wrap">
-                <a class="slider-link more-link" href="" title="">Подробнее</a>
-                <ul class="slider-controls">
-                  <li class="toggle">
-                    <input class="visually-hidden slider-checkbox" type="radio" id="slide-1" name="active" checked>
-                    <label class="toggle-1" for="slide-1">Первый</label>
-                  </li>
-                  <li class="toggle">
-                    <input class="visually-hidden slider-checkbox" type="radio" id="slide-2" name="active">
-                    <label class="toggle-2" for="slide-2">Второй</label>
-                  </li>
-                  <li class="toggle">
-                    <input class="visually-hidden slider-checkbox" type="radio" id="slide-3" name="active">
-                    <label class="toggle-3" for="slide-3">Третий</label>
-                  </li>
-                </ul>
+                <a class="more-link" href="">Подробнее</a>
               </div>
               <table class="parameters">
                 <tbody>
@@ -99,12 +94,22 @@
             </div>
           </li>
         </ul>
+        <ul class="slider-controls">
+          <li class="toggle">
+            <button type="button">Первый</button>
+          <li class="toggle">
+            <button type="button">Второй</button>
+          </li>
+          <li class="toggle">
+            <button type="button">Третий</button>
+          </li>
+        </ul>
       </section>
       <section class="container categories">
         <h2 class="visually-hidden">Категории товаров</h2>
         <ul class="categories-list">
           <li class="categories-item">
-            <a class="categories-link" href="" title="">
+            <a class="categories-link" href="">
               <div class="categories-img">
                 <img src="img/" alt="">
               </div>
@@ -112,7 +117,7 @@
             </a>
           </li>
           <li class="categories-item">
-            <a class="categories-link" href="catalog.html" title="">
+            <a class="categories-link" href="catalog.html">
               <div class="categories-img">
                 <img src="img/" alt="">
               </div>
@@ -120,7 +125,7 @@
             </a>
           </li>
           <li class="categories-item">
-            <a class="categories-link" href="" title="">
+            <a class="categories-link" href="">
               <div class="categories-img">
                 <img src="img/" alt="">
               </div>
@@ -128,7 +133,7 @@
             </a>
           </li>
           <li class="categories-item">
-            <a class="categories-link" href="" title="">
+            <a class="categories-link" href="">
               <div class="categories-img">
                 <img src="img/" alt="">
               </div>
@@ -136,7 +141,7 @@
             </a>
           </li>
           <li class="categories-item">
-            <a class="categories-link" href="" title="">
+            <a class="categories-link" href="">
               <div class="categories-img">
                 <img src="img/" alt="">
               </div>
@@ -144,7 +149,7 @@
             </a>
           </li>
           <li class="categories-item">
-            <a class="categories-link" href="" title="">
+            <a class="categories-link" href="">
               <div class="categories-img">
                 <img src="img/" alt="">
               </div>
@@ -158,27 +163,27 @@
         <div class="container">
           <ul class="services-list">
             <li class="service-item">
-              <a class="service-link service-link--active more-link" href="" title="">Доставка</a>
+              <a class="service-link-active more-link" href="">Доставка</a>
             </li>
             <li class="service-item">
-              <a class="service-link more-link" href="" title="">Гарантия</a>
+              <a class="more-link" href="">Гарантия</a>
             </li>
             <li class="service-item">
-              <a class="service-link more-link" href="" title="">Кредит</a>
+              <a class="more-link" href="">Кредит</a>
             </li>
           </ul>
           <div class="service-desc">
             <div class="service-block-show">
-              <h2 class="service-block-title title">Доставка</h2>
-              <p class="service-block-text text-site">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+              <h2>Доставка</h2>
+              <p class="text-site">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
             </div>
             <div class="service-block-no">
-              <h2 class="service-block-title">Гарантия</h2>
-              <p class="service-block-text text-site">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+              <h2>Гарантия</h2>
+              <p class="text-site">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
             </div>
             <div class="service-block-show">
-              <h2 class="service-block-title">Кредит</h2>
-              <p class="service-block-text text-site">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
+              <h2>Кредит</h2>
+              <p class="text-site">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
             </div>
           </div>
         </div>
@@ -187,53 +192,53 @@
         <h2 class="visually-hidden">Партнеры</h2>
         <ul class="partners-list">
           <li class="partner-item">
-            <a href="" title="">
-              <img src="img/" alt="dji">
+            <a href="">
+              <img src="img/" alt="Dji">
             </a>
           </li>
           <li class="partner-item">
-            <a href="" title="">
-              <img src="img/" alt="spGadgets">
+            <a href="">
+              <img src="img/" alt="SpGadgets">
             </a>
           </li>
           <li class="partner-item">
-            <a href="" title="">
+            <a href="">
               <img src="img/" alt="GoPro">
             </a>
           </li>
           <li class="partner-item">
-            <a href="" title="">
-              <img src="img/" alt="vive">
+            <a href="">
+              <img src="img/" alt="Vive">
             </a>
           </li>
         </ul>
       </section>
       <div class="about-wrap">
         <section class="about-us">
-          <h2 class="about-us-title title">О нас</h2>
-          <p class="about-us-text text-site">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-          <p class="about-us-text text-site">Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+          <h2 class="title">О нас</h2>
+          <p class="text-site">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+          <p class="text-site">Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
           <ul class="delivery-partners">
             <li class="delivery-partners-item">Деловые линии</li>
             <li class="delivery-partners-item">Автотрейдинг</li>
             <li class="delivery-partners-item">ЖелДорЭкспедиция</li>
           </ul>
-          <a class="about-us-link more-link" href="" title="">Подробнее о нас</a>
+          <a class="about-us-link more-link" href="">Подробнее о нас</a>
         </section>
         <section class="contacts">
-          <h2 class="contacts-title title">Контакты</h2>
-          <p class="contacts-text text-site">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-          <a class="contacts-map" href="" title="">
+          <h2 class="title">Контакты</h2>
+          <p class="text-site">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+          <a class="contacts-map" href="">
             <img src="img/" alt="карта">
           </a>
-          <a class="write-us more-link" href="" title="">Напишите нам</a>
+          <a class="write-us more-link" href="">Напишите нам</a>
         </section>
       </div>
     </main>
     <footer class="page-footer">
       <div class="container">
         <div class="footer-wrap">
-          <a class="logo footer-logo" title="">Device</a>
+          <a class="logo footer-logo">Device</a>
           <div class="footer-users">
             <a class="footer-user-link login-footer">Войти</a>
             <a class="footer-user-link compare-footer">Сравнить</a>
@@ -244,16 +249,16 @@
           <p class="address">г. Москва, ул. Строителей, 15</p>
           <ul class="footer-navigation">
             <li class="footer-navigation-item">
-              <a href="" title="">Доставка</a>
+              <a href="">Доставка</a>
             </li>
             <li class="footer-navigation-item">
-              <a href="" title="">Гарантия</a>
+              <a href="">Гарантия</a>
             </li>
             <li class="footer-navigation-item">
-              <a href="" title="">Контакты</a>
+              <a href="">Контакты</a>
             </li>
           </ul>
-          <p class="footer-phone">Тел.: +7 (495) 495-95-95</p>
+          <a class="footer-phone" href="">Тел.: +7 (495) 495-95-95</a>
           <div class="footer-contacts">
             <ul class="social-list">
               <li class="social-item">
@@ -278,7 +283,7 @@
       </a>
     </li>
   </ul>
-  <a class="academy-logo" href="" title="">
+  <a class="academy-logo" href="">
     <img src="img/" alt="">
   </a>
 </div>
