Закрытие тега li и добавление в слайдер кнопок вместо ссылок

--- a/catalog.html
+++ b/catalog.html
@@ -168,7 +168,7 @@
                   </li>
                 </ul>
             </fieldset>
-            <button type="submit" class="button more-link">Показать</button>
+            <input type="submit" class="button more-link" value="Показать">
           </form>
         </aside>
       </div>
@@ -305,7 +305,7 @@
       </a>
     </li>
   </ul>
-  <a class="academy-logo" href="">
+  <a class="academy-logo" href="https://htmlacademy.ru/intensive/htmlcss">
     <img src="img/" alt="">
   </a>
 </div>
