--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         <ul class="slider-controls">
           <li class="toggle">
             <button type="button">Первый</button>
+          </li>
           <li class="toggle">
             <button type="button">Второй</button>
           </li>
@@ -163,13 +164,13 @@
         <div class="container">
           <ul class="services-list">
             <li class="service-item">
-              <a class="service-link-active more-link" href="">Доставка</a>
+              <button class="service-link-active more-link" type="button">Доставка</button>
             </li>
             <li class="service-item">
-              <a class="more-link" href="">Гарантия</a>
+              <button class="more-link" type="button">Гарантия</button>
             </li>
             <li class="service-item">
-              <a class="more-link" href="">Кредит</a>
+              <button class="more-link" type="button">Кредит</button>
             </li>
           </ul>
           <div class="service-desc">
@@ -283,7 +284,7 @@
       </a>
     </li>
   </ul>
-  <a class="academy-logo" href="">
+  <a class="academy-logo" href="https://htmlacademy.ru/intensive/htmlcss">
     <img src="img/" alt="">
   </a>
 </div>
