--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <title>HTML Academy: Девайс</title>
+    <link rel="icon" href="favicon.ico">
     <link rel="preload" href="fonts/opensans.woff2" as="font">
     <link rel="preload" href="fonts/opensansbold.woff2" as="font">
     <link rel="preload" href="fonts/opensanslight.woff2" as="font">
@@ -23,7 +24,6 @@
           </form>
           <a class="header-user person-header" href="">Валентин Петухов</a>
           <a class="header-user login-out-header" href="">Выйти</a>
-          <a class="header-user login-header" href="">Войти</a>
           <a class="header-user compare-header" href="">Сравнить</a>
           <a class="header-user cart-header" href="">Корзина</a>
         </div>
@@ -77,7 +77,7 @@
                 <a href="">Каталог товаров</a>
               </li>
               <li class="crumb-item">
-                <a href="">Моноподы для селфи</a>
+                Моноподы для селфи
               </li>
             </ul>
         </section>
@@ -112,8 +112,9 @@
       </div>
     <div class="content-catalog">
       <div class="container">
-        <aside class="filter">
-          <form class="filter-form" action="https://echo.htmlacademy.ru" method="post">
+        <section class="filter">
+          <h2 class="visually-hidden">Фильтр товаров</h2>
+          <form class="filter-form" action="https://echo.htmlacademy.ru" method="get">
             <fieldset class="filter-list">
               <legend>Стоимость</legend>
                 <div class="filter-price-range">
@@ -138,7 +139,7 @@
                     <label for="filter-black">Черный</label>
                   </li>
                   <li class="filter-color-item">
-                    <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="white" id="filter-white">
+                    <input class="visually-hidden filter-checkbox" type="checkbox" name="white" id="filter-white">
                     <label for="filter-white">Белый</label>
                   </li>
                   <li class="filter-color-item">
@@ -168,26 +169,23 @@
                   </li>
                 </ul>
             </fieldset>
-            <input type="submit" class="button more-link" value="Показать">
+            <button type="submit" class="button more-link">Показать</button>
           </form>
-        </aside>
-      </div>
-    </div>
+        </section>
     <section class="catalog-products">
-      <h2 class="visually-hidden">Каталог товаров</h2>
+      <h2 class="visually-hidden">Список товаров</h2>
       <ul class="products-list">
         <li class="products-item">
           <div class="product-image">
             <img src="img/" alt="">
           </div>
           <div class="info-hover">
-            <a class="more-link" href="">В корзину</a>
+            <button class="more-link" type="button">В корзину</button>
             <button type="submit" class="button more-link">Добавить к сравнению</button>
           </div>
-          <div class="product-info">
-            <a class="" href="">Любительская селфи-палка</a>
-            <p class="product-price">500 руб</p>
-          </div>
+          <p class="product-info">
+            <a class="" href="">Любительская селфи-палка</a>500 руб
+          </p>
         </li>
         <li class="products-item">
           <div class="product-image">
@@ -197,10 +195,9 @@
             <a class="more-link" href="">В корзину</a>
             <button type="submit" class="button more-link">Добавить к сравнению</button>
           </div>
-          <div class="product-info">
-            <a class="" href="">Профессиональная селфи‑палка</a>
-            <p class="product-price">1 500 руб</p>
-          </div>
+          <p class="product-info">
+            <a class="" href="">Профессиональная селфи‑палка</a>1 500 руб
+          </p>
         </li>
         <li class="products-item">
           <div class="product-image">
@@ -210,10 +207,9 @@
             <a class="more-link" href="">В корзину</a>
             <button type="submit" class="button more-link">Добавить к сравнению</button>
           </div>
-          <div class="product-info">
-            <a class="" href="">Непотопляемая селфи-палка</a>
-            <p class="product-price">2 500 руб</p>
-          </div>
+          <p class="product-info">
+            <a class="" href="">Непотопляемая селфи-палка</a>2 500 руб
+          </p>
         </li>
         <li class="products-item">
           <div class="product-image">
@@ -223,36 +219,28 @@
             <a class="more-link" href="">В корзину</a>
             <button type="submit" class="button more-link">Добавить к сравнению</button>
           </div>
-          <div class="product-info">
-            <a class="" href="">Селфи-палка «Следуй за мной»</a>
-            <p class="product-price">4 900 руб</p>
-          </div>
+          <p class="product-info">
+            <a class="" href="">Селфи-палка «Следуй за мной»</a>4 900 руб
         </li>
       </ul>
       <div class="pagination">
-        <ul class="pagination-list">
-          <li class="pagination-item">
-            <button class="pagination-btn">Назад</button>
-          </li>
-          <li>
+        <a class="pagination-btn" href="">Назад</a>
           <ul class="pagination-number">
             <li>
-              <button class="pagination-number-active">1</button>
+              <a class="pagination-number-active">1</a>
             </li>
             <li>
-              <button>2</button>
+              <a href="">2</a>
             </li>
             <li>
-              <button>3</button>
+              <a href="">3</a>
             </li>
           </ul>
-        </li>
-          <li class="pagination-item">
-            <button class="pagination-btn">Вперед</button>
-          </li>
-        </ul>
+        <a class="pagination-btn" href="">Вперед</a>
       </div>
     </section>
+  </div>
+</div>
     </div>
     </main>
     <footer class="page-footer">
@@ -262,7 +250,6 @@
           <div class="footer-users">
             <a class="footer-user person-header" href="">Валентин Петухов</a>
             <a class="footer-user login-out-header" href="">Выйти</a>
-            <a class="footer-user-link login-footer">Войти</a>
             <a class="footer-user-link compare-footer">Сравнить</a>
             <a class="footer-user-link cart-footer">Корзина</a>
           </div>
@@ -280,37 +267,42 @@
               <a href="">Контакты</a>
             </li>
           </ul>
-          <a class="footer-phone" href="">Тел.: +7 (495) 495-95-95</a>
+          <p class="footer-phone">Тел.:
+            <a href="tel:+74954959595">+7 (495) 495-95-95</a>
+          </p>
           <div class="footer-contacts">
             <ul class="social-list">
               <li class="social-item">
-                <a class="social-link" href="#facebook" title="facebook"><span class="visually-hidden">Фейсбук</span>
-                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 10.15 21.74">
-                  <path d="M3.34 1.12A4.77 4.77 0 0 1 6.53 0h3.61v3.81H7.81a1.07 1.07 0 0 0-1.09.83v2.55h3.42c-.08 1.23-.24 2.45-.41 3.67h-3v10.87H2.21V10.86H0V7.21h2.19V3.66a3.83 3.83 0 0 1 1.15-2.54z" fill="#fff"/>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a class="social-link" href="#instagram" title="instagram"><span class="visually-hidden">Инстаграм</span>
-              <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 20 20">
-              <path d="M18 0H2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm-8 6a4 4 0 1 1-4 4 4 4 0 0 1 4-4zM2.5 18a.47.47 0 0 1-.5-.5V9h2.1a3.4 3.4 0 0 0-.1 1 6 6 0 1 0 12 0 3.4 3.4 0 0 0-.1-1H18v8.5a.47.47 0 0 1-.5.5zM18 4.5a.47.47 0 0 1-.5.5h-2a.47.47 0 0 1-.5-.5v-2a.47.47 0 0 1 .5-.5h2a.47.47 0 0 1 .5.5z" fill="#fff"></path>
-            </svg>
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="social-link" href="#twitter" title="twitter"><span class="visually-hidden">Твиттер</span>
-          <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 20 20">
-          <path d="M18 0H2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm-8 6a4 4 0 1 1-4 4 4 4 0 0 1 4-4zM2.5 18a.47.47 0 0 1-.5-.5V9h2.1a3.4 3.4 0 0 0-.1 1 6 6 0 1 0 12 0 3.4 3.4 0 0 0-.1-1H18v8.5a.47.47 0 0 1-.5.5zM18 4.5a.47.47 0 0 1-.5.5h-2a.47.47 0 0 1-.5-.5v-2a.47.47 0 0 1 .5-.5h2a.47.47 0 0 1 .5.5z" fill="#fff"></path>
-        </svg>
-      </a>
-    </li>
-  </ul>
-  <a class="academy-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-    <img src="img/" alt="">
-  </a>
-</div>
-</div>
-</div>
-</footer>
-</body>
+                <a class="social-link" href="#facebook" title="facebook">
+                  <span class="visually-hidden">Фейсбук</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 10.15 21.74">
+                    <path d="M3.34 1.12A4.77 4.77 0 0 1 6.53 0h3.61v3.81H7.81a1.07 1.07 0 0 0-1.09.83v2.55h3.42c-.08 1.23-.24 2.45-.41 3.67h-3v10.87H2.21V10.86H0V7.21h2.19V3.66a3.83 3.83 0 0 1 1.15-2.54z" fill="#fff"/>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="#instagram" title="instagram">
+                  <span class="visually-hidden">Инстаграм</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 20 20">
+                    <path d="M18 0H2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm-8 6a4 4 0 1 1-4 4 4 4 0 0 1 4-4zM2.5 18a.47.47 0 0 1-.5-.5V9h2.1a3.4 3.4 0 0 0-.1 1 6 6 0 1 0 12 0 3.4 3.4 0 0 0-.1-1H18v8.5a.47.47 0 0 1-.5.5zM18 4.5a.47.47 0 0 1-.5.5h-2a.47.47 0 0 1-.5-.5v-2a.47.47 0 0 1 .5-.5h2a.47.47 0 0 1 .5.5z" fill="#fff"></path>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="#twitter" title="twitter">
+                  <span class="visually-hidden">Твиттер</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 20 20">
+                    <path d="M18 0H2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm-8 6a4 4 0 1 1-4 4 4 4 0 0 1 4-4zM2.5 18a.47.47 0 0 1-.5-.5V9h2.1a3.4 3.4 0 0 0-.1 1 6 6 0 1 0 12 0 3.4 3.4 0 0 0-.1-1H18v8.5a.47.47 0 0 1-.5.5zM18 4.5a.47.47 0 0 1-.5.5h-2a.47.47 0 0 1-.5-.5v-2a.47.47 0 0 1 .5-.5h2a.47.47 0 0 1 .5.5z" fill="#fff"></path>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+            <a class="academy-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+              <img src="img/" alt="">
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
