--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <title>HTML Academy: Девайс</title>
+    <link rel="icon" href="favicon.ico">
     <link rel="preload" href="fonts/opensans.woff2" as="font">
     <link rel="preload" href="fonts/opensansbold.woff2" as="font">
     <link rel="preload" href="fonts/opensanslight.woff2" as="font">
@@ -232,7 +233,7 @@
           <a class="contacts-map" href="">
             <img src="img/" alt="карта">
           </a>
-          <a class="write-us more-link" href="">Напишите нам</a>
+          <a class="write-us more-link" href="">Напишите нам</a>0
         </section>
       </div>
     </main>
@@ -259,37 +260,63 @@
               <a href="">Контакты</a>
             </li>
           </ul>
-          <a class="footer-phone" href="">Тел.: +7 (495) 495-95-95</a>
+          <p class="footer-phone">Тел.:
+            <a href="tel:+74954959595">+7 (495) 495-95-95</a>
+          </p>
           <div class="footer-contacts">
             <ul class="social-list">
               <li class="social-item">
-                <a class="social-link" href="#facebook" title="facebook"><span class="visually-hidden">Фейсбук</span>
-                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 10.15 21.74">
-                  <path d="M3.34 1.12A4.77 4.77 0 0 1 6.53 0h3.61v3.81H7.81a1.07 1.07 0 0 0-1.09.83v2.55h3.42c-.08 1.23-.24 2.45-.41 3.67h-3v10.87H2.21V10.86H0V7.21h2.19V3.66a3.83 3.83 0 0 1 1.15-2.54z" fill="#fff"/>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a class="social-link" href="#instagram" title="instagram"><span class="visually-hidden">Инстаграм</span>
-              <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 20 20">
-              <path d="M18 0H2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm-8 6a4 4 0 1 1-4 4 4 4 0 0 1 4-4zM2.5 18a.47.47 0 0 1-.5-.5V9h2.1a3.4 3.4 0 0 0-.1 1 6 6 0 1 0 12 0 3.4 3.4 0 0 0-.1-1H18v8.5a.47.47 0 0 1-.5.5zM18 4.5a.47.47 0 0 1-.5.5h-2a.47.47 0 0 1-.5-.5v-2a.47.47 0 0 1 .5-.5h2a.47.47 0 0 1 .5.5z" fill="#fff"></path>
-            </svg>
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="social-link" href="#twitter" title="twitter"><span class="visually-hidden">Твиттер</span>
-          <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 20 20">
-          <path d="M18 0H2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm-8 6a4 4 0 1 1-4 4 4 4 0 0 1 4-4zM2.5 18a.47.47 0 0 1-.5-.5V9h2.1a3.4 3.4 0 0 0-.1 1 6 6 0 1 0 12 0 3.4 3.4 0 0 0-.1-1H18v8.5a.47.47 0 0 1-.5.5zM18 4.5a.47.47 0 0 1-.5.5h-2a.47.47 0 0 1-.5-.5v-2a.47.47 0 0 1 .5-.5h2a.47.47 0 0 1 .5.5z" fill="#fff"></path>
-        </svg>
-      </a>
-    </li>
-  </ul>
-  <a class="academy-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-    <img src="img/" alt="">
-  </a>
-</div>
-</div>
-</div>
-</footer>
-</body>
+                <a class="social-link" href="#facebook" title="facebook">
+                  <span class="visually-hidden">Фейсбук</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 10.15 21.74">
+                    <path d="M3.34 1.12A4.77 4.77 0 0 1 6.53 0h3.61v3.81H7.81a1.07 1.07 0 0 0-1.09.83v2.55h3.42c-.08 1.23-.24 2.45-.41 3.67h-3v10.87H2.21V10.86H0V7.21h2.19V3.66a3.83 3.83 0 0 1 1.15-2.54z" fill="#fff"/>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="#instagram" title="instagram">
+                  <span class="visually-hidden">Инстаграм</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 20 20">
+                    <path d="M18 0H2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm-8 6a4 4 0 1 1-4 4 4 4 0 0 1 4-4zM2.5 18a.47.47 0 0 1-.5-.5V9h2.1a3.4 3.4 0 0 0-.1 1 6 6 0 1 0 12 0 3.4 3.4 0 0 0-.1-1H18v8.5a.47.47 0 0 1-.5.5zM18 4.5a.47.47 0 0 1-.5.5h-2a.47.47 0 0 1-.5-.5v-2a.47.47 0 0 1 .5-.5h2a.47.47 0 0 1 .5.5z" fill="#fff"></path>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="#twitter" title="twitter">
+                  <span class="visually-hidden">Твиттер</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 20 20">
+                    <path d="M18 0H2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm-8 6a4 4 0 1 1-4 4 4 4 0 0 1 4-4zM2.5 18a.47.47 0 0 1-.5-.5V9h2.1a3.4 3.4 0 0 0-.1 1 6 6 0 1 0 12 0 3.4 3.4 0 0 0-.1-1H18v8.5a.47.47 0 0 1-.5.5zM18 4.5a.47.47 0 0 1-.5.5h-2a.47.47 0 0 1-.5-.5v-2a.47.47 0 0 1 .5-.5h2a.47.47 0 0 1 .5.5z" fill="#fff"></path>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+            <a class="academy-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+              <img src="img/" alt="">
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <section class="modal modal-show">
+      <h2 class="visually-hidden">Напишите нам</h2>
+        <form class="form-write-us" action="http://echo.htmlacademy.ru" method="get">
+          <div class="write-us-wrap">
+            <p class="write-us-item">
+              <label for="user-name">Ваше имя:</label>
+              <input type="text" name="name" placeholder="Имя Фамилия" id="user-name">
+            </p>
+            <p class="write-us-item">
+              <label for="user-mail">Ваш e-mail:</label>
+              <input type="email" name="e-mail" placeholder="email@example.com" id="user-mail">
+            </p>
+          </div>
+          <p class="write-us-item field-text">
+            <label for="user-text">Текст письма:</label>
+            <textarea name="user-text" placeholder="В свободной форме" id="user-text"></textarea>
+          </p>
+          <button class="more-link" type="submit">Отправить</button>
+        </form>
+        <button class="modal-close" type="button"></button>
+    </section>
+  </body>
 </html>
