Исправление ссылок корзина на кнопки

--- a/catalog.html
+++ b/catalog.html
@@ -192,7 +192,7 @@
             <img src="img/" alt="">
           </div>
           <div class="info-hover">
-            <a class="more-link" href="">В корзину</a>
+            <button class="more-link" type="button">В корзину</button>
             <button type="submit" class="button more-link">Добавить к сравнению</button>
           </div>
           <p class="product-info">
@@ -204,7 +204,7 @@
             <img src="img/" alt="">
           </div>
           <div class="info-hover">
-            <a class="more-link" href="">В корзину</a>
+            <button class="more-link" type="button">В корзину</button>
             <button type="submit" class="button more-link">Добавить к сравнению</button>
           </div>
           <p class="product-info">
@@ -216,7 +216,7 @@
             <img src="img/" alt="">
           </div>
           <div class="info-hover">
-            <a class="more-link" href="">В корзину</a>
+            <button class="more-link" type="button">В корзину</button>
             <button type="submit" class="button more-link">Добавить к сравнению</button>
           </div>
           <p class="product-info">
