Исправление слова квадрокоптеры

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   <a href="">Умные часы</a>
                 </li>
                 <li class="goods-item">
-                  <a href="">Квадрокопторы</a>
+                  <a href="">Квадрокоптеры</a>
                 </li>
               </ul>
             </li>
