--- a/catalog.html
+++ b/catalog.html
@@ -48,7 +48,7 @@
                   <a href="">Умные часы</a>
                 </li>
                 <li class="goods-item">
-                  <a href="">Квадрокопторы</a>
+                  <a href="">Квадрокоптеры</a>
                 </li>
               </ul>
             </li>
