Исправление кнопок в корзину и добавить к сравнению на ссылки

--- a/catalog.html
+++ b/catalog.html
@@ -180,8 +180,8 @@
             <img src="img/" alt="">
           </div>
           <div class="info-hover">
-            <button class="more-link" type="button">В корзину</button>
-            <button type="submit" class="button more-link">Добавить к сравнению</button>
+            <a class="more-link" href="">В корзину</a>
+            <a class="info-hover-compare" href="">Добавить к сравнению</a>
           </div>
           <p class="product-info">
             <a class="" href="">Любительская селфи-палка</a>500 руб
@@ -192,8 +192,8 @@
             <img src="img/" alt="">
           </div>
           <div class="info-hover">
-            <button class="more-link" type="button">В корзину</button>
-            <button type="submit" class="button more-link">Добавить к сравнению</button>
+            <a class="more-link" href="">В корзину</a>
+            <a class="info-hover-compare" href="">Добавить к сравнению</a>
           </div>
           <p class="product-info">
             <a class="" href="">Профессиональная селфи‑палка</a>1 500 руб
@@ -204,8 +204,8 @@
             <img src="img/" alt="">
           </div>
           <div class="info-hover">
-            <button class="more-link" type="button">В корзину</button>
-            <button type="submit" class="button more-link">Добавить к сравнению</button>
+            <a class="more-link" href="">В корзину</a>
+            <a class="info-hover-compare" href="">Добавить к сравнению</a>
           </div>
           <p class="product-info">
             <a class="" href="">Непотопляемая селфи-палка</a>2 500 руб
@@ -216,8 +216,8 @@
             <img src="img/" alt="">
           </div>
           <div class="info-hover">
-            <button class="more-link" type="button">В корзину</button>
-            <button type="submit" class="button more-link">Добавить к сравнению</button>
+            <a class="more-link" href="">В корзину</a>
+            <a class="info-hover-compare" href="">Добавить к сравнению</a>
           </div>
           <p class="product-info">
             <a class="" href="">Селфи-палка «Следуй за мной»</a>4 900 руб
